--- a/Blik Mac/GLAProjectViewController.xib
+++ b/Blik Mac/GLAProjectViewController.xib
@@ -23,12 +23,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
-        <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="GLAProjectView">
+        <customView identifier="projectView" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY" customClass="GLAProjectView">
             <rect key="frame" x="0.0" y="0.0" width="500" height="271"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <customView placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="8vi-0s-ZAk" customClass="GLAView">
-                    <rect key="frame" x="0.0" y="0.0" width="500" height="36"/>
+                    <rect key="frame" x="0.0" y="0.0" width="500" height="39"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <connections>
                         <outlet property="delegate" destination="fD5-0A-qdK" id="OPS-R4-6E8"/>
@@ -47,14 +47,14 @@
                     </textFieldCell>
                 </textField>
                 <scrollView verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="34" horizontalPageScroll="10" verticalLineScroll="34" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="aK9-xA-IHE">
-                    <rect key="frame" x="20" y="48" width="160" height="174"/>
+                    <rect key="frame" x="20" y="47" width="160" height="175"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="3UR-hc-b9q">
-                        <rect key="frame" x="0.0" y="0.0" width="160" height="174"/>
+                        <rect key="frame" x="0.0" y="0.0" width="160" height="175"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" selectionHighlightStyle="none" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="32" viewBased="YES" id="0t7-tp-C0y">
-                                <rect key="frame" x="0.0" y="0.0" width="160" height="174"/>
+                                <rect key="frame" x="0.0" y="0.0" width="160" height="175"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -112,7 +112,7 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <constraints>
-                        <constraint firstAttribute="height" priority="751" constant="174" id="B9G-tJ-wrx"/>
+                        <constraint firstAttribute="height" priority="751" constant="175" id="B9G-tJ-wrx"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="163" id="bAy-Ej-emY"/>
                         <constraint firstAttribute="width" constant="160" id="yQu-cr-U1i"/>
                     </constraints>
@@ -125,15 +125,15 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
-                <scrollView verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="38" horizontalPageScroll="10" verticalLineScroll="38" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-jm-1gd">
-                    <rect key="frame" x="200" y="48" width="300" height="174"/>
+                <scrollView identifier="width" verticalHuggingPriority="750" borderType="none" autohidesScrollers="YES" horizontalLineScroll="38" horizontalPageScroll="10" verticalLineScroll="38" verticalPageScroll="36" hasHorizontalScroller="NO" horizontalScrollElasticity="none" scrollerKnobStyle="light" translatesAutoresizingMaskIntoConstraints="NO" id="b3Y-jm-1gd">
+                    <rect key="frame" x="200" y="47" width="300" height="175"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="feV-1y-3x9">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="174"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="175"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="36" rowSizeStyle="automatic" viewBased="YES" id="qcb-6b-Ekp">
-                                <rect key="frame" x="0.0" y="0.0" width="300" height="174"/>
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="175"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -204,7 +204,7 @@
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <constraints>
-                        <constraint firstAttribute="height" priority="749" constant="174" id="1YL-eX-iqA"/>
+                        <constraint firstAttribute="height" priority="749" constant="175" id="1YL-eX-iqA"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="163" id="9Co-2Y-eFL"/>
                         <constraint firstAttribute="width" constant="300" id="vaW-wj-dTb"/>
                     </constraints>
@@ -221,27 +221,32 @@
             <constraints>
                 <constraint firstItem="aK9-xA-IHE" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" priority="750" constant="20" id="4N2-fG-NN0"/>
                 <constraint firstAttribute="bottom" secondItem="8vi-0s-ZAk" secondAttribute="bottom" id="52E-z7-sjo"/>
-                <constraint firstItem="8vi-0s-ZAk" firstAttribute="top" secondItem="b3Y-jm-1gd" secondAttribute="bottom" priority="750" constant="12" id="9SR-1S-pao"/>
+                <constraint firstItem="8vi-0s-ZAk" firstAttribute="top" secondItem="b3Y-jm-1gd" secondAttribute="bottom" priority="750" constant="8" id="9SR-1S-pao"/>
                 <constraint firstAttribute="trailing" secondItem="b3Y-jm-1gd" secondAttribute="trailing" priority="750" id="GXN-5G-oay"/>
                 <constraint firstAttribute="trailing" secondItem="8vi-0s-ZAk" secondAttribute="trailing" id="Idp-m0-oEx"/>
                 <constraint firstItem="uUN-fG-dyR" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Jtf-4x-qzc"/>
                 <constraint firstAttribute="trailing" secondItem="uUN-fG-dyR" secondAttribute="trailing" constant="20" id="KXo-l8-01e"/>
                 <constraint firstItem="8vi-0s-ZAk" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="XrK-id-Ay0"/>
                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="500" id="f6P-NC-GhS"/>
-                <constraint firstItem="8vi-0s-ZAk" firstAttribute="top" secondItem="aK9-xA-IHE" secondAttribute="bottom" priority="750" constant="12" id="fUN-x8-iVl"/>
+                <constraint firstItem="8vi-0s-ZAk" firstAttribute="top" secondItem="aK9-xA-IHE" secondAttribute="bottom" priority="750" constant="8" id="fUN-x8-iVl"/>
                 <constraint firstItem="b3Y-jm-1gd" firstAttribute="top" secondItem="uUN-fG-dyR" secondAttribute="bottom" constant="10" id="kCC-Vv-gHE"/>
                 <constraint firstItem="aK9-xA-IHE" firstAttribute="top" secondItem="uUN-fG-dyR" secondAttribute="bottom" constant="10" id="pkd-ih-1R5"/>
                 <constraint firstItem="uUN-fG-dyR" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="10" id="xJ9-mw-q1z"/>
             </constraints>
         </customView>
-        <viewController id="raF-W4-b8E" customClass="GLAProjectCollectionsViewController">
+        <viewController title="Collections View Controller" id="raF-W4-b8E" customClass="GLAProjectCollectionsViewController">
             <connections>
+                <outlet property="parentViewController" destination="-2" id="zhQ-Yp-077"/>
                 <outlet property="view" destination="0t7-tp-C0y" id="y5o-4F-krh"/>
             </connections>
         </viewController>
-        <viewController id="aDf-pc-aeE" customClass="GLAProjectPlanViewController">
+        <viewController title="Plan View Controller" id="aDf-pc-aeE" customClass="GLAProjectPlanViewController">
             <connections>
-                <outlet property="view" destination="qcb-6b-Ekp" id="cOl-4U-kDx"/>
+                <outlet property="chooseExistingRemindersButton" destination="HFX-tx-bsh" id="joR-cw-ewb"/>
+                <outlet property="editingActionsView" destination="kYy-Eb-3WH" id="aQu-al-b9I"/>
+                <outlet property="makeNewReminderButton" destination="gya-ze-oT1" id="x6L-i5-uFc"/>
+                <outlet property="parentViewController" destination="-2" id="kAI-Y6-LNm"/>
+                <outlet property="tableView" destination="qcb-6b-Ekp" id="WeB-DQ-KSM"/>
             </connections>
         </viewController>
         <viewController id="fD5-0A-qdK" customClass="GLAProjectActionsBarController">
@@ -383,6 +388,61 @@
                 <constraint firstAttribute="trailing" secondItem="c85-1L-Qdb" secondAttribute="trailing" id="Nd2-v1-aYQ"/>
                 <constraint firstItem="c85-1L-Qdb" firstAttribute="top" secondItem="s2J-94-MlT" secondAttribute="top" id="dcz-Dw-euk"/>
                 <constraint firstItem="c85-1L-Qdb" firstAttribute="leading" secondItem="s2J-94-MlT" secondAttribute="leading" id="dki-yk-U58"/>
+            </constraints>
+        </customView>
+        <customView placeholderIntrinsicWidth="500" placeholderIntrinsicHeight="30" id="kYy-Eb-3WH" customClass="GLAView">
+            <rect key="frame" x="0.0" y="0.0" width="300" height="70"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <button placeholderIntrinsicWidth="140" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="HFX-tx-bsh" customClass="GLAButton">
+                    <rect key="frame" x="0.0" y="40" width="300" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="UPi-9v-z2P"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" title="Choose from Existing Reminders" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wxn-uc-vPn" customClass="GLAButtonCell">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" size="13" name="AvenirNext-Medium"/>
+                    </buttonCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
+                            <integer key="value" value="-2"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="alwaysHighlighted" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="chooseExistingReminders:" target="aDf-pc-aeE" id="zor-Hg-E3k"/>
+                    </connections>
+                </button>
+                <button placeholderIntrinsicWidth="140" placeholderIntrinsicHeight="30" translatesAutoresizingMaskIntoConstraints="NO" id="gya-ze-oT1" customClass="GLAButton">
+                    <rect key="frame" x="0.0" y="0.0" width="300" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="cw3-6l-doZ"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" title="Make New Reminder" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="IfQ-og-t9s" customClass="GLAButtonCell">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" size="13" name="AvenirNext-Medium"/>
+                    </buttonCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cell.verticalOffsetDown">
+                            <integer key="value" value="-2"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="alwaysHighlighted" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="editPlan:" target="-2" id="PaO-BH-hT1"/>
+                    </connections>
+                </button>
+            </subviews>
+            <constraints>
+                <constraint firstItem="HFX-tx-bsh" firstAttribute="leading" secondItem="kYy-Eb-3WH" secondAttribute="leading" id="DbB-k1-cAP"/>
+                <constraint firstItem="HFX-tx-bsh" firstAttribute="top" secondItem="kYy-Eb-3WH" secondAttribute="top" priority="750" id="GHi-qx-sCP"/>
+                <constraint firstItem="gya-ze-oT1" firstAttribute="top" secondItem="HFX-tx-bsh" secondAttribute="bottom" constant="10" id="Pvg-T5-TFZ"/>
+                <constraint firstItem="gya-ze-oT1" firstAttribute="leading" secondItem="kYy-Eb-3WH" secondAttribute="leading" id="T0l-4t-Q6O"/>
+                <constraint firstAttribute="trailing" secondItem="gya-ze-oT1" secondAttribute="trailing" id="ZrF-ds-jxf"/>
+                <constraint firstAttribute="trailing" secondItem="HFX-tx-bsh" secondAttribute="trailing" id="fKn-6i-9GL"/>
+                <constraint firstAttribute="bottom" secondItem="gya-ze-oT1" secondAttribute="bottom" id="vFh-jk-2QI"/>
             </constraints>
         </customView>
     </objects>
